--- a/name.html
+++ b/name.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>File Converter</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 </head>
@@ -18,14 +18,18 @@
                 <a href="convert.html" id="tab">Converter</a>
                 <a href="name.html" id="tab">Names</a>
             </div>
-            <div class="logo" id="logo">Home Page</div>
+            <div class="logo" id="logo">Name Generator</div>
         </div>
     </header>
     <main id="main">
         <section class="hero" id="hero">
             <div id="main">
-                    <h1 id="whiteText">This website is made for people that want to grow their business. You have a lot of functions on this website to start a business but also grow one.<button id="whiteButton" href="https://discord.gg/DXHgywdfPp">Join The Discord</button></h1>
-                    <p id="whiteTextExtra">Explore and enjoy the website!</p>
+                <div class="container">
+                    <h1>Enter a Keyword!</h1>
+                    <input type="text" id="keyword" placeholder="Enter your keyword" />
+                    <button onclick="generateName()">Generate Name</button>
+                    <div class="result" id="result"></div>
+                </div>
         </section>
         <section class="features" id="features">
             <h2 id="features-title">Why Choose Us?</h2>
