--- a/name.html
+++ b/name.html
@@ -29,6 +29,9 @@
                     <input type="text" id="keyword" placeholder="Enter your keyword" />
                     <button onclick="generateName()">Generate Name</button>
                     <div class="result" id="result"></div>
+                    <a id="download-button" href="https://discord.gg/DXHgywdfPp">Join The Discord For More Updates!</a>
+    
+                    <div class="scroll-down" onclick="scrollToInfo()">&#8595; Learn More</div>
                 </div>
         </section>
         <section class="features" id="features">
